added task endpoint
